<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:src="@drawable/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/faça_login"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/entre_info_cadastro"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/e_mail"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            style="@style/CustomTextEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/digite_seu_e_mail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/senha"
        android:textColor="@color/gray"
        android:textSize="14sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSenha"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray2"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSenha"
            style="@style/CustomTextEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/digite_sua_senha"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/lembre_me"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/esqueci_minha_senha"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/entrar"
        android:textColor="@color/brown"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/nao_tem_uma_conta"
            android:textColor="@color/yellow"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRegistra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/registre_se"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>