<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:src="@drawable/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/faca_seu_cadastro"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/info_solicitadas"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsuario"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:startIconDrawable="@drawable/user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUsuario"
            style="@style/CustomTextEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/informe_usuario"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:startIconDrawable="@drawable/mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            style="@style/CustomTextEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/digite_seu_e_mail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSenha"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray2"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSenha"
            style="@style/CustomTextEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/digite_sua_senha"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/confira_prosseguir"
        android:textColor="@color/yellow"
        android:textSize="14sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/registrar"
        android:textColor="@color/brown"
        android:textSize="16sp" />

</LinearLayout>